Add gprof and force debug mode

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -82,6 +82,46 @@ $(warning CXXFLAGS: You have replaced default compilation flags by your own flag
 endif
 
 ###################################################
+# Profile code.
+#
+ifeq ($(USE_GPROF),1)
+CXXFLAGS += -pg
+LDFLAGS += -pg
+ifeq ($(BUILD_TYPE),release)
+BUILD_TYPE = debug
+$(warning Release mode desired but USE_BACKWARD will force debug mode)
+endif
+endif
+
+###################################################
+# Use AddressSanitizer.
+#
+ifeq ($(USE_ASAN),1)
+CXXFLAGS += -fsanitize=address -fno-omit-frame-pointer
+LDFLAGS += -fsanitize=address -static-libasan
+endif
+
+###################################################
+# Use Backward for tracing the stack when a crash occured.
+#
+ifeq ($(USE_BACKWARD),1)
+OBJS := backward.o $(OBJS)
+INCLUDES += -I$(THIRDPART)/backward-cpp
+VPATH += $(THIRDPART)/backward-cpp
+ifeq ($(BUILD_TYPE),release)
+BUILD_TYPE = debug
+$(warning Release mode desired but USE_BACKWARD will force debug mode)
+endif
+ifneq ($(ARCHI),Darwin)
+DEFINES += -DBACKWARD_HAS_DW=1 -DBACKWARD_HAS_BFD=0 -DBACKWARD_HAS_DWARF=0
+DEFINES += -DBACKWARD_HAS_UNWIND=1 -DBACKWARD_HAS_BACKTRACE=0
+DEFINES += -DBACKWARD_HAS_BACKTRACE_SYMBOL=1
+PKG_LIBS += libdw
+endif
+DEFINES +=
+endif
+
+###################################################
 # TODO: -O1 is needed for hardening
 # TODO: -O0 seems better for debuging with g++
 # GCC and clang Optimization flags
@@ -100,30 +140,6 @@ OPTIM_FLAGS := -O2 -g
 DEFINES += -UNDEBUG -D_GLIBCXX_ASSERTIONS
 else
 $(error BUILD_TYPE shall be debug or release)
-endif
-
-###################################################
-# Use AddressSanitizer.
-#
-ifeq ($(USE_ASAN),1)
-CXXFLAGS += -fsanitize=address -fno-omit-frame-pointer
-LDFLAGS += -fsanitize=address -static-libasan
-endif
-
-###################################################
-# Use Backward for tracing the stack when a crash occured.
-#
-ifeq ($(USE_BACKWARD),1)
-OBJS := backward.o $(OBJS)
-INCLUDES += -I$(THIRDPART)/backward-cpp
-VPATH += $(THIRDPART)/backward-cpp
-ifneq ($(ARCHI),Darwin)
-DEFINES += -DBACKWARD_HAS_DW=1 -DBACKWARD_HAS_BFD=0 -DBACKWARD_HAS_DWARF=0
-DEFINES += -DBACKWARD_HAS_UNWIND=1 -DBACKWARD_HAS_BACKTRACE=0
-DEFINES += -DBACKWARD_HAS_BACKTRACE_SYMBOL=1
-PKG_LIBS += libdw
-endif
-DEFINES +=
 endif
 
 ###################################################
