--- a/Makefile.footer
+++ b/Makefile.footer
@@ -127,7 +127,11 @@ gprof: $(TARGET)
 .PHONY: coverage
 coverage: $(TARGET)
 	@$(call print-to,"Running","$(TARGET)","$(COVERAGE_RAPPORT)","")
+ifeq ($(TRAVIS),true)
+	@./$(BUILD)/$(TARGET)
+else
 	@./$(BUILD)/$(TARGET) || echo ""
+endif
 	@$(call print-to,"Documentation","$(COVERAGE_RAPPORT)","$(COVERAGE_DIR)","")
 	@lcov --quiet --directory .. -c -o $(COVERAGE_RAPPORT)
 	@lcov --quiet --remove $(COVERAGE_RAPPORT) '/usr*' 'external/*' 'tests/*' -o $(COVERAGE_RAPPORT)
