--- a/Makefile.footer
+++ b/Makefile.footer
@@ -81,9 +81,9 @@ $(PKG_FILE): $(MYMAKEFILES) VERSION
 #
 $(THIRDPART)/backward-cpp/backward.cpp: $(THIRDPART)/backward-cpp/.git/config
 $(THIRDPART)/backward-cpp/.git/config: | $(BUILD)
-	@if [ ! -d "$(P)/$(THIRDPART)/backward-cpp" ] ; then \
+	@if [ ! -d "$(THIRDPART)/backward-cpp" ] ; then \
 	$(call print-to,"Downloading","backward-cpp","$(TARGET)",""); \
-	mkdir -p $(P)/$(THIRDPART) && cd $(P)/$(THIRDPART) && git clone https://github.com/Lecrapouille/backward-cpp.git --depth=1 > /dev/null 2> /dev/null; \
+	mkdir -p $(THIRDPART) && cd $(THIRDPART) && git clone https://github.com/Lecrapouille/backward-cpp.git --depth=1 > /dev/null 2> /dev/null; \
 	fi
 
 ###################################################
