--- a/Makefile.macros
+++ b/Makefile.macros
@@ -199,14 +199,14 @@ endef
 # Install folder and files of third part libraries
 #
 define INSTALL_THIRDPART_FOLDER
-	@$(call INSTALL_FOLDER,$(THIRDPART)/$(1),$(INCLDIR)/$(THIRDPART)/$(2),$(3))
+	@$(call INSTALL_FOLDER,$(THIRDPART)/$(1),$(INCLDIR)/$(2),$(3))
 endef
 
 ###################################################
 # Install files of third part libraries
 #
 define INSTALL_THIRDPART_FILES
-	@$(call INSTALL_FILES,$(THIRDPART)/$(1),$(INCLDIR)/$(THIRDPART)/$(2),-maxdepth 1 -mindepth 1 $(3))
+	@$(call INSTALL_FILES,$(THIRDPART)/$(1),$(INCLDIR)/$(2),-maxdepth 1 -mindepth 1 $(3))
 endef
 
 ###################################################
