--- a/Makefile.header
+++ b/Makefile.header
@@ -52,10 +52,8 @@ CXX ?=
 BUILD ?= build
 
 ###################################################
-# Note: do not use $(P)/external VPATH seems not linking that.
-#
-# Define the directory holding third part libraries that shall be compiled (default: external).
-THIRDPART ?= external
+# Define the directory holding third part libraries that shall be compiled (default: $(P)/external).
+THIRDPART ?= $(P)/external
 
 ###################################################
 # Define the directory holding generated documentation (default: doc).
