--- a/Makefile.flags
+++ b/Makefile.flags
@@ -155,8 +155,8 @@ endif
 #
 ifeq ($(USE_BACKWARD),1)
 OBJS += backward.o
-INCLUDES += -I$(THIRDPART)/backward-cpp
-VPATH += $(THIRDPART)/backward-cpp
+INCLUDES += -I$(BUILD)/backward-cpp
+VPATH += $(BUILD)/backward-cpp
 ifneq ($(ARCHI),Darwin)
 DEFINES += -DBACKWARD_HAS_DW=1 -DBACKWARD_HAS_BFD=0 -DBACKWARD_HAS_DWARF=0
 DEFINES += -DBACKWARD_HAS_UNWIND=1 -DBACKWARD_HAS_BACKTRACE=0
